--- a/idol_gallery/idol_detail/asuka.html
+++ b/idol_gallery/idol_detail/asuka.html
@@ -38,7 +38,7 @@
     <script src="../../js/jquery-2.2.2.min.js"></script>
     <script>
         (function() {
-            var _url = "http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/game_error/report_js_error";
+            var _url = "../../game_error/report_js_error";
             var _path = location.href;
             var _spec_obj;
             var _spec = 'none';
@@ -235,14 +235,14 @@
             <div class="displayBox" style="-webkit-box-pack:center;width:300px;">
                 <div style="width:50%">
                     <a class="btn_3rd_anniversary js_submit_check_idol_comment_3rd m-Top10 t-Cnt jsOnDesignBtn"></a>
-                    <form method="post" action='http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/campaign/check_idol_comment' class="form_check_idol_comment_3rd" style="display:none;">
+                    <form method="post" action='../../campaign/check_idol_comment' class="form_check_idol_comment_3rd" style="display:none;">
                         <input type="hidden" name="character_id" value="130">
                         <input type="hidden" name="select_card_hash" value="">
                     </form>
                 </div>
                 <div style="width:50%">
                     <a class="btn_5th_anniversary js_submit_check_idol_comment_5th m-Top10 t-Cnt jsOnDesignBtn"></a>
-                    <form method="post" action='http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/campaign_present/redirect_flash_idol_comment_replay' class="form_check_idol_comment_5th" style="display:none;">
+                    <form method="post" action='../../campaign_present/redirect_flash_idol_comment_replay' class="form_check_idol_comment_5th" style="display:none;">
                         <input type="hidden" name="card_hash" value="">
                         <input type="hidden" name="redirect_url" value="">
                         <input type="hidden" name="campaign_id" value="114">
@@ -277,12 +277,12 @@
             }
 
             .ep_on {
-                background: url('http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/ui/rich/icon/icon_checkbox_on.png') no-repeat 35px 5px;
+                background: url('../../image_sp/ui/rich/icon/icon_checkbox_on.png') no-repeat 35px 5px;
                 background-size: 21px;
             }
 
             .ep_off {
-                background: url('http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/ui/rich/icon/icon_checkbox_off.png') no-repeat 35px 5px;
+                background: url('../../image_sp/ui/rich/icon/icon_checkbox_off.png') no-repeat 35px 5px;
                 background-size: 21px;
             }
             -->
