--- a/mypage.html
+++ b/mypage.html
@@ -372,11 +372,45 @@
                     </a>
                 </div>
                 <div class="gallery" style="display: inline-block;width: 96px;height:117px;margin: 1px 1px;">
+                    <a href='idol_gallery/idol_detail/asuka.html' style="display:block" class="jsOnDesignBtn">
+                        <div class="rare_cool" style="overflow:hidden;width:96px;height:117px;background-size:96px 117px;">
+                            <div class="idol" style="background: url( image_sp/card/quest/asuka_01.png ) -16px -16px no-repeat;background-size: 126px;margin:0;margin-left:3px;margin-top:3px;width:91px;height:111px;"></div>
+                            <div class="name_plate_cool" style="-webkit-transform:skew(7deg,-7deg);position: absolute;left: 4px;bottom: 11px;width: 85px;background-size: 85px;height: 17px;">
+                                <div class="name_cool text_shadow_cool" style="font-size:10px;top:-4px;left:-8px;-webkit-backface-visibility: hidden;">二宮飛鳥</div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="t-Lft" style="width:310px;margin:auto;">
+                <div class="gallery" style="display: inline-block;width: 96px;height:117px;margin: 1px 1px;">
+                    <a href='idol_gallery/idol_detail/yoriko.html' style="display:block" class="jsOnDesignBtn">
+                        <div class="normal_cool" style="overflow:hidden;width:96px;height:117px;background-size:96px 117px;">
+                            <div class="idol" style="background: url( image_sp/card/quest/yoriko_31.png ) -16px -16px no-repeat;background-size: 126px;margin:0;margin-left:3px;margin-top:3px;width:91px;height:111px;"></div>
+                            <div class="name_plate_cool" style="-webkit-transform:skew(7deg,-7deg);position: absolute;left: 4px;bottom: 11px;width: 85px;background-size: 85px;height: 17px;">
+                                <div class="name_cool text_shadow_cool" style="font-size:10px;top:-4px;left:-8px;-webkit-backface-visibility: hidden;">요리코</div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="gallery" style="display: inline-block;width: 96px;height:117px;margin: 1px 1px;">
                     <a href='idol_gallery/idol_detail/ranko_k.html' style="display:block" class="jsOnDesignBtn">
                         <div class="rare_cool" style="overflow:hidden;width:96px;height:117px;background-size:96px 117px;">
                             <div class="idol" style="background: url( image_sp/card/quest/ranko_42.jpg ) -16px -16px no-repeat;background-size: 126px;margin:0;margin-left:3px;margin-top:3px;width:91px;height:111px;"></div>
                             <div class="name_plate_cool" style="-webkit-transform:skew(7deg,-7deg);position: absolute;left: 4px;bottom: 11px;width: 85px;background-size: 85px;height: 17px;">
                                 <div class="name_cool text_shadow_cool" style="font-size:10px;top:-4px;left:-8px;-webkit-backface-visibility: hidden;">란코</div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="gallery" style="display: inline-block;width: 96px;height:117px;margin: 1px 1px;">
+                    <a href='idol_gallery/idol_detail/asuka_k.html' style="display:block" class="jsOnDesignBtn">
+                        <div class="rare_cool" style="overflow:hidden;width:96px;height:117px;background-size:96px 117px;">
+                            <div class="idol" style="background: url( image_sp/card/quest/asuka_38.jpg ) -16px -16px no-repeat;background-size: 126px;margin:0;margin-left:3px;margin-top:3px;width:91px;height:111px;"></div>
+                            <div class="name_plate_cool" style="-webkit-transform:skew(7deg,-7deg);position: absolute;left: 4px;bottom: 11px;width: 85px;background-size: 85px;height: 17px;">
+                                <div class="name_cool text_shadow_cool" style="font-size:10px;top:-4px;left:-8px;-webkit-backface-visibility: hidden;">아스카</div>
                             </div>
                         </div>
                     </a>
