--- a/memory/anniversary.html
+++ b/memory/anniversary.html
@@ -94,7 +94,7 @@
             <a href="../vote/publish_all/200010.html" class="banner_type_text offBanner" style="background-image:url(../image_sp/banner/attraction/aa46ce5a44349928bd971717125de32d.png)"></a>
         </div>
         <div class="jsOnBanner">
-            <a href="../memory/smart_phone_flash/convert/onetime_flash/200353.html" class="banner_type_text offBanner" style="background-image:url(../image_sp/banner/attraction/0f4c90d4ace57542db263a376785b656.png)"></a>
+            <a href="onetime_flash/show_swf/200353.html" class="banner_type_text offBanner" style="background-image:url(../image_sp/banner/attraction/0f4c90d4ace57542db263a376785b656.png)"></a>
         </div>
         <br>
         <footer>
