--- a/memory/onetime_flash/show_swf/200355.html
+++ b/memory/onetime_flash/show_swf/200355.html
@@ -63,33 +63,33 @@
         window.file_name = "countdown_login"; // createjs の本体ファイルを定義
         window.dir_name = "../../../../../image_sp/cjs/campaign/anniversary/10th/countdown_login/";
         window.replace_images = {
-            "replace_chara": "/cjs/campaign/anniversary/10th/countdown_login/countdown_chara/countdown_chara_9.jpg",
-            "replace_target_240x240_item_l": "campaign_flash/item_l/item_1000003.png"
+            "replace_chara": "/cjs/campaign/anniversary/10th/countdown_login/countdown_chara/countdown_chara_8.jpg",
+            "replace_target_240x240_item_l": "campaign_flash/item_l/item_14.png"
         }
         window.im_cjs = {
-            "url": "200355.html",
+            "url": "../../anniversary.html",
             "item_flag": "0",
-            "num_countdown": "9",
-            "msg1_1": "十時愛梨ですっ♪なんと､もう",
-            "msg1_2": "すぐｱﾆﾊﾞｰｻﾘｰなんですよ～! ",
-            "msg1_3": "これから毎日､思い出を振り返り",
-            "msg1_4": "ながらｶｳﾝﾄﾀﾞｳﾝしましょう♪",
-            "msg2_1": "私が特に楽しかったのは…",
-            "msg2_2": "お菓子を作ったことと～､密着",
-            "msg2_3": "取材も受けたし～､ﾒｲﾄﾞさんも…",
-            "msg2_4": "あーん決められません～!",
-            "txt1_1": "ﾏｼﾞｶﾙｴｯｾﾝｽとｼﾞｭｴﾙ100個を",
+            "num_countdown": "8",
+            "msg1_1": "年月を経て尚､色褪せぬもの…",
+            "msg1_2": "それは､我と我が友との間に芽",
+            "msg1_3": "生えた､魂の絆…! いざ示さん! ",
+            "msg1_4": "宝珠の如き我が記憶!",
+            "msg2_1": "(勇者ﾗﾝｺ､楽しかったなぁ♪)｡",
+            "msg2_2": "そして､進化…! (最初は絵を見",
+            "msg2_3": "られるの､ｲﾔだったっけ…)",
+            "msg2_4": "どれも大切な､私の思い出です♪",
+            "txt1_1": "ﾏｲｽﾀﾐﾅﾄﾞﾘﾝｸ10個とｼﾞｭｴﾙ100個を",
             "txt1_2": "GET! 贈り物から受け取ってください｡",
             "txt1_3": "ﾌﾘｰﾄﾚｰﾄﾞﾁｹｯﾄを3枚ﾌﾟﾚｾﾞﾝﾄ｡ ※3枚以上",
             "txt1_4": "所持している場合は付与されません｡",
-            "cp_day": "1",
+            "cp_day": "2",
             "first_flag": 1,
             "rocket_position": 0,
-            "_url": "200355.html"
+            "_url": "../../anniversary.html"
         };
         window.child_obj = [];
         window.im_cjs = window.im_cjs || {};
-        window.im_cjs.jump_url = '200355.html'; // createjsの演出が全て終了した場合の飛び先urlの定義
+        window.im_cjs.jump_url = '../../../mypage.html'; // createjsの演出が全て終了した場合の飛び先urlの定義
         var _ua = navigator.userAgent;
         var ios_app_flg = false;
         var ios_browser_flg = (_ua.indexOf('iPhone') !== -1) ? true : false;
