--- a/memory/onetime_flash/show_swf/200356.html
+++ b/memory/onetime_flash/show_swf/200356.html
@@ -63,29 +63,29 @@
         window.file_name = "countdown_login"; // createjs の本体ファイルを定義
         window.dir_name = "../../../../../image_sp/cjs/campaign/anniversary/10th/countdown_login/";
         window.replace_images = {
-            "replace_chara": "/cjs/campaign/anniversary/10th/countdown_login/countdown_chara/countdown_chara_8.jpg",
-            "replace_target_240x240_item_l": "campaign_flash/item_l/item_14.png"
+            "replace_chara": "/cjs/campaign/anniversary/10th/countdown_login/countdown_chara/countdown_chara_7.jpg",
+            "replace_target_240x240_item_l": "campaign_flash/item_l/item_15.png"
         }
         window.im_cjs = {
-            "url": "200356.html",
+            "url": "../../anniversary.html",
             "item_flag": "0",
-            "num_countdown": "8",
-            "msg1_1": "年月を経て尚､色褪せぬもの…",
-            "msg1_2": "それは､我と我が友との間に芽",
-            "msg1_3": "生えた､魂の絆…! いざ示さん! ",
-            "msg1_4": "宝珠の如き我が記憶!",
-            "msg2_1": "(勇者ﾗﾝｺ､楽しかったなぁ♪)｡",
-            "msg2_2": "そして､進化…! (最初は絵を見",
-            "msg2_3": "られるの､ｲﾔだったっけ…)",
-            "msg2_4": "どれも大切な､私の思い出です♪",
-            "txt1_1": "ﾏｲｽﾀﾐﾅﾄﾞﾘﾝｸ10個とｼﾞｭｴﾙ100個を",
+            "num_countdown": "7",
+            "msg1_1": "愛…って難しい｡けど､私はﾌｧﾝ",
+            "msg1_2": "を､ｱｲﾄﾞﾙの仕事を､愛してると",
+            "msg1_3": "思う｡…ｱｲﾄﾞﾙとして成長しても､",
+            "msg1_4": "わからないことは多いよ",
+            "msg2_1": "でも､この先もﾌﾟﾛﾃﾞｭｰｻｰと走り",
+            "msg2_2": "続けていれば…いつか辿り着け",
+            "msg2_3": "る｡見たい景色が見られる｡",
+            "msg2_4": "それだけは…わかるんだ",
+            "txt1_1": "ﾏｲｴﾅｼﾞｰﾄﾞﾘﾝｸ10個とｼﾞｭｴﾙ100個を",
             "txt1_2": "GET! 贈り物から受け取ってください｡",
             "txt1_3": "ﾌﾘｰﾄﾚｰﾄﾞﾁｹｯﾄを3枚ﾌﾟﾚｾﾞﾝﾄ｡ ※3枚以上",
             "txt1_4": "所持している場合は付与されません｡",
-            "cp_day": "2",
-            "first_flag": 1,
-            "rocket_position": 0,
-            "_url": "200356.html"
+            "cp_day": "3",
+            "first_flag": 0,
+            "rocket_position": 2,
+            "_url": "../../anniversary.html"
         };
         window.child_obj = [];
         window.im_cjs = window.im_cjs || {};
