--- a/memory/onetime_flash/show_swf/200356_k.html
+++ b/memory/onetime_flash/show_swf/200356_k.html
@@ -70,14 +70,14 @@
             "url": "200357.html",
             "item_flag": "0",
             "num_countdown": "7",
-            "msg1_1": "愛…って難しい｡けど､私はﾌｧﾝ",
-            "msg1_2": "を､ｱｲﾄﾞﾙの仕事を､愛してると",
-            "msg1_3": "思う｡…ｱｲﾄﾞﾙとして成長しても､",
-            "msg1_4": "わからないことは多いよ",
-            "msg2_1": "でも､この先もﾌﾟﾛﾃﾞｭｰｻｰと走り",
-            "msg2_2": "続けていれば…いつか辿り着け",
-            "msg2_3": "る｡見たい景色が見られる｡",
-            "msg2_4": "それだけは…わかるんだ",
+            "msg1_1": "사랑…은 어려워. 하지만, 나는 팬을,",
+            "msg1_2": "아이돌 일을, 사랑한다고 생각해.",
+            "msg1_3": "…아이돌로서 성장하고도,",
+            "msg1_4": "모르는 건 많아.",
+            "msg2_1": "그래도, 앞으로도 프로듀서와 계속",
+            "msg2_2": "달리다 보면… 언젠가 다다를 수 있어.",
+            "msg2_3": "보고 싶은 경치가 보여.",
+            "msg2_4": "그것만은… 알 수 있어.",
             "txt1_1": "ﾏｲｴﾅｼﾞｰﾄﾞﾘﾝｸ10個とｼﾞｭｴﾙ100個を",
             "txt1_2": "GET! 贈り物から受け取ってください｡",
             "txt1_3": "ﾌﾘｰﾄﾚｰﾄﾞﾁｹｯﾄを3枚ﾌﾟﾚｾﾞﾝﾄ｡ ※3枚以上",
