--- a/memory/onetime_flash/show_swf/200357_k.html
+++ b/memory/onetime_flash/show_swf/200357_k.html
@@ -63,29 +63,29 @@
         window.file_name = "countdown_login"; // createjs の本体ファイルを定義
         window.dir_name = "../../../../../image_sp/cjs/campaign/anniversary/10th/countdown_login/";
         window.replace_images = {
-            "replace_chara": "/cjs/campaign/anniversary/10th/countdown_login/countdown_chara/countdown_chara_7.jpg",
-            "replace_target_240x240_item_l": "campaign_flash/item_l/item_15.png"
+            "replace_chara": "/cjs/campaign/anniversary/10th/countdown_login/countdown_chara/countdown_chara_6.jpg",
+            "replace_target_240x240_item_l": "campaign_flash/item_l/gacha_0.png"
         }
         window.im_cjs = {
-            "url": "200357.html",
+            "url": "../../anniversary.html",
             "item_flag": "0",
-            "num_countdown": "7",
-            "msg1_1": "愛…って難しい｡けど､私はﾌｧﾝ",
-            "msg1_2": "を､ｱｲﾄﾞﾙの仕事を､愛してると",
-            "msg1_3": "思う｡…ｱｲﾄﾞﾙとして成長しても､",
-            "msg1_4": "わからないことは多いよ",
-            "msg2_1": "でも､この先もﾌﾟﾛﾃﾞｭｰｻｰと走り",
-            "msg2_2": "続けていれば…いつか辿り着け",
-            "msg2_3": "る｡見たい景色が見られる｡",
-            "msg2_4": "それだけは…わかるんだ",
-            "txt1_1": "ﾏｲｴﾅｼﾞｰﾄﾞﾘﾝｸ10個とｼﾞｭｴﾙ100個を",
-            "txt1_2": "GET! 贈り物から受け取ってください｡",
+            "num_countdown": "6",
+            "msg1_1": "옷, 슈코 쨩의 차례일까나?",
+            "msg1_2": "얏호~. 란 걸로, 앞으로 5일 정도?",
+            "msg1_3": " 몇 시간? 이랄까 6일?",
+            "msg1_4": "이면 애니버서리야~♪",
+            "msg2_1": "저기, 기억하고 있어? 당일치기 도쿄 투어.",
+            "msg2_2": "가게 보고, 신사에 가고…. 그",
+            "msg2_3": "때의 약속, 지켜줘서 고마워~.",
+            "msg2_4": "나 지금, 즐거워♪",
+            "txt1_1": "ﾌﾟﾗﾁﾅｵｰﾃﾞｨｼｮﾝｶﾞﾁｬﾁｹｯﾄ5枚とｼﾞｭｴﾙ100個",
+            "txt1_2": "をGET! 贈り物から受け取ってください｡",
             "txt1_3": "ﾌﾘｰﾄﾚｰﾄﾞﾁｹｯﾄを3枚ﾌﾟﾚｾﾞﾝﾄ｡ ※3枚以上",
             "txt1_4": "所持している場合は付与されません｡",
-            "cp_day": "3",
+            "cp_day": "4",
             "first_flag": 0,
-            "rocket_position": 2,
-            "_url": "200357.html"
+            "rocket_position": "3",
+            "_url": "../../anniversary.html"
         };
         window.child_obj = [];
         window.im_cjs = window.im_cjs || {};
