--- a/memory/onetime_flash/show_swf/200355_k.html
+++ b/memory/onetime_flash/show_swf/200355_k.html
@@ -63,29 +63,29 @@
         window.file_name = "countdown_login"; // createjs の本体ファイルを定義
         window.dir_name = "../../../../../image_sp/cjs/campaign/anniversary/10th/countdown_login/";
         window.replace_images = {
-            "replace_chara": "/cjs/campaign/anniversary/10th/countdown_login/countdown_chara/countdown_chara_7.jpg",
-            "replace_target_240x240_item_l": "campaign_flash/item_l/item_15.png"
+            "replace_chara": "/cjs/campaign/anniversary/10th/countdown_login/countdown_chara/countdown_chara_8.jpg",
+            "replace_target_240x240_item_l": "campaign_flash/item_l/item_14.png"
         }
         window.im_cjs = {
-            "url": "200357.html",
+            "url": "200356.html",
             "item_flag": "0",
-            "num_countdown": "7",
-            "msg1_1": "愛…って難しい｡けど､私はﾌｧﾝ",
-            "msg1_2": "を､ｱｲﾄﾞﾙの仕事を､愛してると",
-            "msg1_3": "思う｡…ｱｲﾄﾞﾙとして成長しても､",
-            "msg1_4": "わからないことは多いよ",
-            "msg2_1": "でも､この先もﾌﾟﾛﾃﾞｭｰｻｰと走り",
-            "msg2_2": "続けていれば…いつか辿り着け",
-            "msg2_3": "る｡見たい景色が見られる｡",
-            "msg2_4": "それだけは…わかるんだ",
-            "txt1_1": "ﾏｲｴﾅｼﾞｰﾄﾞﾘﾝｸ10個とｼﾞｭｴﾙ100個を",
+            "num_countdown": "8",
+            "msg1_1": "세월이 흘러도 여전히, 빛이 바래지 않는",
+            "msg1_2": "것… 그건, 나와 나의 벗 사이에 싹튼,",
+            "msg1_3": "영혼의 유대…! 자 보이겠다!",
+            "msg1_4": "보주와 같은 내 기억!",
+            "msg2_1": "(용자 란코, 즐거웠었지♪). ",
+            "msg2_2": "그리고, 진화…! (처음엔 그림이",
+            "msg2_3": "보여진 거, 싫었었지…)",
+            "msg2_4": "모두 소중한, 제 추억이에요♪",
+            "txt1_1": "ﾏｲｽﾀﾐﾅﾄﾞﾘﾝｸ10個とｼﾞｭｴﾙ100個を",
             "txt1_2": "GET! 贈り物から受け取ってください｡",
             "txt1_3": "ﾌﾘｰﾄﾚｰﾄﾞﾁｹｯﾄを3枚ﾌﾟﾚｾﾞﾝﾄ｡ ※3枚以上",
             "txt1_4": "所持している場合は付与されません｡",
-            "cp_day": "3",
-            "first_flag": 0,
-            "rocket_position": 2,
-            "_url": "200357.html"
+            "cp_day": "2",
+            "first_flag": 1,
+            "rocket_position": 1,
+            "_url": "200356.html"
         };
         window.child_obj = [];
         window.im_cjs = window.im_cjs || {};
