--- a/memory/onetime_flash/show_swf/200357.html
+++ b/memory/onetime_flash/show_swf/200357.html
@@ -63,29 +63,29 @@
         window.file_name = "countdown_login"; // createjs の本体ファイルを定義
         window.dir_name = "../../../../../image_sp/cjs/campaign/anniversary/10th/countdown_login/";
         window.replace_images = {
-            "replace_chara": "/cjs/campaign/anniversary/10th/countdown_login/countdown_chara/countdown_chara_7.jpg",
-            "replace_target_240x240_item_l": "campaign_flash/item_l/item_15.png"
+            "replace_chara": "/cjs/campaign/anniversary/10th/countdown_login/countdown_chara/countdown_chara_6.jpg",
+            "replace_target_240x240_item_l": "campaign_flash/item_l/gacha_0.png"
         }
         window.im_cjs = {
-            "url": "200357.html",
+            "url": "../../anniversary.html",
             "item_flag": "0",
-            "num_countdown": "7",
-            "msg1_1": "愛…って難しい｡けど､私はﾌｧﾝ",
-            "msg1_2": "を､ｱｲﾄﾞﾙの仕事を､愛してると",
-            "msg1_3": "思う｡…ｱｲﾄﾞﾙとして成長しても､",
-            "msg1_4": "わからないことは多いよ",
-            "msg2_1": "でも､この先もﾌﾟﾛﾃﾞｭｰｻｰと走り",
-            "msg2_2": "続けていれば…いつか辿り着け",
-            "msg2_3": "る｡見たい景色が見られる｡",
-            "msg2_4": "それだけは…わかるんだ",
-            "txt1_1": "ﾏｲｴﾅｼﾞｰﾄﾞﾘﾝｸ10個とｼﾞｭｴﾙ100個を",
-            "txt1_2": "GET! 贈り物から受け取ってください｡",
+            "num_countdown": "6",
+            "msg1_1": "おっ､ｼｭｰｺちゃんの出番かな? ",
+            "msg1_2": "やっほー｡ってわけで､あと5日",
+            "msg1_3": "とちょい? 数時間? っていうか",
+            "msg1_4": "6日? でｱﾆﾊﾞｰｻﾘｰだよー♪",
+            "msg2_1": "ね､覚えてる? 日帰り京都ﾂｱｰ｡",
+            "msg2_2": "店番して､神社行って…｡あの",
+            "msg2_3": "時の約束､守ってくれてありが",
+            "msg2_4": "とー｡あたし今､楽しいよ♪",
+            "txt1_1": "ﾌﾟﾗﾁﾅｵｰﾃﾞｨｼｮﾝｶﾞﾁｬﾁｹｯﾄ5枚とｼﾞｭｴﾙ100個",
+            "txt1_2": "をGET! 贈り物から受け取ってください｡",
             "txt1_3": "ﾌﾘｰﾄﾚｰﾄﾞﾁｹｯﾄを3枚ﾌﾟﾚｾﾞﾝﾄ｡ ※3枚以上",
             "txt1_4": "所持している場合は付与されません｡",
-            "cp_day": "3",
+            "cp_day": "4",
             "first_flag": 0,
-            "rocket_position": 2,
-            "_url": "200357.html"
+            "rocket_position": "3",
+            "_url": "../../anniversary.html"
         };
         window.child_obj = [];
         window.im_cjs = window.im_cjs || {};
