--- a/memory/onetime_flash/show_swf/200357_k.html
+++ b/memory/onetime_flash/show_swf/200357_k.html
@@ -72,11 +72,11 @@
             "num_countdown": "6",
             "msg1_1": "옷, 슈코 쨩의 차례일까나?",
             "msg1_2": "얏호~. 란 걸로, 앞으로 5일 정도?",
-            "msg1_3": " 몇 시간? 이랄까 6일?",
+            "msg1_3": "몇 시간? 이랄까 6일?",
             "msg1_4": "이면 애니버서리야~♪",
             "msg2_1": "저기, 기억하고 있어? 당일치기 도쿄 투어.",
-            "msg2_2": "가게 보고, 신사에 가고…. 그",
-            "msg2_3": "때의 약속, 지켜줘서 고마워~.",
+            "msg2_2": "가게 보고, 신사에 가고….",
+            "msg2_3": "그 때의 약속, 지켜줘서 고마워~.",
             "msg2_4": "나 지금, 즐거워♪",
             "txt1_1": "ﾌﾟﾗﾁﾅｵｰﾃﾞｨｼｮﾝｶﾞﾁｬﾁｹｯﾄ5枚とｼﾞｭｴﾙ100個",
             "txt1_2": "をGET! 贈り物から受け取ってください｡",
