--- a/idol_gallery/idol_detail/asuka.html
+++ b/idol_gallery/idol_detail/asuka.html
@@ -2385,20 +2385,20 @@ kg
                         "comments_love_max": "ﾎﾞｸたちは波のように過ぎ去る刹那の存在｡だからせめて､ｺｺﾛに互いを刻もう｡無常のｾｶｲに対する､ささやかな異議申し立てさ"
                     },
                     "voice": {
-                        "comment": "http://resource.mobamas.net/idolmaster/sound/2328302/69db36cc363eb2e05750bc0b5351ee1d.mp4",
-                        "comments_my_1": "http://resource.mobamas.net/idolmaster/sound/2328302/aadcc49b2ec24f36de90bcb7ec5e6658.mp4",
-                        "comments_my_2": "http://resource.mobamas.net/idolmaster/sound/2328302/d130a81e9af62dfd1310b63d6e27d4bc.mp4",
-                        "comments_my_3": "http://resource.mobamas.net/idolmaster/sound/2328302/c58f961f940ae32b66d075272f4325a3.mp4",
-                        "comments_my_4": "http://resource.mobamas.net/idolmaster/sound/2328302/c2c9c4604d44e07957546350443d2821.mp4",
-                        "comments_my_max": "http://resource.mobamas.net/idolmaster/sound/2328302/230a7d106152c4b0de2684d42c5a253d.mp4",
-                        "comments_work_1": "http://resource.mobamas.net/idolmaster/sound/2328302/7a57fc83cea6e1947bc48045fb4b2c43.mp4",
-                        "comments_work_2": "http://resource.mobamas.net/idolmaster/sound/2328302/59634853029525aca1dce86dccb2e2e0.mp4",
-                        "comments_work_3": "http://resource.mobamas.net/idolmaster/sound/2328302/ed461d310d0cac0d02285afa54b0c8c5.mp4",
-                        "comments_work_4": "http://resource.mobamas.net/idolmaster/sound/2328302/f2f06ed53574d216d05831ed9c52791d.mp4",
-                        "comments_work_max": "http://resource.mobamas.net/idolmaster/sound/2328302/658204f117cbe2cc4d8670a1b8117458.mp4",
-                        "comments_work_love_up": "http://resource.mobamas.net/idolmaster/sound/2328302/8343ca6c4b2d607f2def968400b0f0f2.mp4",
-                        "comments_live": "http://resource.mobamas.net/idolmaster/sound/2328302/485d1da5ef5f9e2d1691b8d65ce1bcb6.mp4",
-                        "comments_love_max": "http://resource.mobamas.net/idolmaster/sound/2328302/8567a503a2eb4ad88800e7f2e764788f.mp4"
+                        "comment": "../../sound/2328302/idolcomment.mp3",
+                        "comments_my_1": "../../sound/2328302/my_1.mp3",
+                        "comments_my_2": "../../sound/2328302/my_2.mp3",
+                        "comments_my_3": "../../sound/2328302/my_3.mp3",
+                        "comments_my_4": "../../sound/2328302/my_4.mp3",
+                        "comments_my_max": "../../sound/2328302/my_max.mp3",
+                        "comments_work_1": "../../sound/2328302/work_1.mp3",
+                        "comments_work_2": "../../sound/2328302/work_2.mp3",
+                        "comments_work_3": "../../sound/2328302/work_3.mp3",
+                        "comments_work_4": "../../sound/2328302/work_4.mp3",
+                        "comments_work_max": "../../sound/2328302/work_max.mp3",
+                        "comments_work_love_up": "../../sound/2328302/work_love_up.mp3",
+                        "comments_live": "../../sound/2328302/live.mp3",
+                        "comments_love_max": "../../sound/2328302/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
@@ -2462,20 +2462,20 @@ kg
                         "comments_love_max": "ﾎﾞｸたちは波のように過ぎ去る刹那の存在｡だからせめて､ｺｺﾛに互いを刻もう｡無常のｾｶｲに対する､ささやかな異議申し立てさ"
                     },
                     "voice": {
-                        "comment": "http://resource.mobamas.net/idolmaster/sound/2328402/eb0b73e0bb582727aea616eb6bb6bd40.mp4",
-                        "comments_my_1": "http://resource.mobamas.net/idolmaster/sound/2328402/bb9344681de3edc01c70773b53a4611c.mp4",
-                        "comments_my_2": "http://resource.mobamas.net/idolmaster/sound/2328402/75a4dcab98037389ec35ce9bed6a342a.mp4",
-                        "comments_my_3": "http://resource.mobamas.net/idolmaster/sound/2328402/8a142de085cdba4bc3287d548747c6d8.mp4",
-                        "comments_my_4": "http://resource.mobamas.net/idolmaster/sound/2328402/d7f438110b7cd67ce592f960b4ab4e06.mp4",
-                        "comments_my_max": "http://resource.mobamas.net/idolmaster/sound/2328402/f8a19ea8a6dc0e185311d0fbf911b7d8.mp4",
-                        "comments_work_1": "http://resource.mobamas.net/idolmaster/sound/2328402/92ae69348c9a3de62abf1823e710bff8.mp4",
-                        "comments_work_2": "http://resource.mobamas.net/idolmaster/sound/2328402/a03aebf1c90edd13d4f46c55cd1a07ab.mp4",
-                        "comments_work_3": "http://resource.mobamas.net/idolmaster/sound/2328402/b2b43814060d5e8252c19dbef60af5f6.mp4",
-                        "comments_work_4": "http://resource.mobamas.net/idolmaster/sound/2328402/04c8090cf7b7d2bd1563f73f72ec1e66.mp4",
-                        "comments_work_max": "http://resource.mobamas.net/idolmaster/sound/2328402/0034390c94e6d12ca8c87eb37a53034e.mp4",
-                        "comments_work_love_up": "http://resource.mobamas.net/idolmaster/sound/2328402/456cd9295bacba57ffde078eaf9cd71e.mp4",
-                        "comments_live": "http://resource.mobamas.net/idolmaster/sound/2328402/140f370943fc8db97cd30e61323bc355.mp4",
-                        "comments_love_max": "http://resource.mobamas.net/idolmaster/sound/2328402/114352a7cbd1272d8ea3977dea712810.mp4"
+                        "comment": "../../sound/2328402/idolcomment.mp3",
+                        "comments_my_1": "../../sound/2328402/my_1.mp3",
+                        "comments_my_2": "../../sound/2328402/my_2.mp3",
+                        "comments_my_3": "../../sound/2328402/my_3.mp3",
+                        "comments_my_4": "../../sound/2328402/my_4.mp3",
+                        "comments_my_max": "../../sound/2328402/my_max.mp3",
+                        "comments_work_1": "../../sound/2328402/work_1.mp3",
+                        "comments_work_2": "../../sound/2328402/work_2.mp3",
+                        "comments_work_3": "../../sound/2328402/work_3.mp3",
+                        "comments_work_4": "../../sound/2328402/work_4.mp3",
+                        "comments_work_max": "../../sound/2328402/work_max.mp3",
+                        "comments_work_love_up": "../../sound/2328402/work_love_up.mp3",
+                        "comments_live": "../../sound/2328402/live.mp3",
+                        "comments_love_max": "../../sound/2328402/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
@@ -2539,20 +2539,20 @@ kg
                         "comments_love_max": "ﾎﾞｸが辿り着きたいのは､自分で選ぶﾐﾗｲ｡それを掴むためなら､譜面くらい手放すさ｡片手は､OOのために空けてある"
                     },
                     "voice": {
-                        "comment": "http://resource.mobamas.net/idolmaster/sound/2438901/bafd2179d2e57d0d3f084556f082b3db.mp4",
-                        "comments_my_1": "http://resource.mobamas.net/idolmaster/sound/2438901/558855c03b79f63d36a7ad88a059ba16.mp4",
-                        "comments_my_2": "http://resource.mobamas.net/idolmaster/sound/2438901/03416e5343835f89a03874b870041ef2.mp4",
-                        "comments_my_3": "http://resource.mobamas.net/idolmaster/sound/2438901/6240aaf2a6aaec5d4dae8c263d0e872e.mp4",
-                        "comments_my_4": "http://resource.mobamas.net/idolmaster/sound/2438901/ef07ecea26131f252286c086cd012462.mp4",
-                        "comments_my_max": "http://resource.mobamas.net/idolmaster/sound/2438901/2856d4ac3f962e7cf1cf164cd7226771.mp4",
-                        "comments_work_1": "http://resource.mobamas.net/idolmaster/sound/2438901/6d3e67bcb4b51b1fd5f94bd026956561.mp4",
-                        "comments_work_2": "http://resource.mobamas.net/idolmaster/sound/2438901/edd7466d9391214d784a4ea99f16ce89.mp4",
-                        "comments_work_3": "http://resource.mobamas.net/idolmaster/sound/2438901/174af3a817a8a3dc48f101edfe7bd4fc.mp4",
-                        "comments_work_4": "http://resource.mobamas.net/idolmaster/sound/2438901/9bd066ea11e929ae7eda3fee05136975.mp4",
-                        "comments_work_max": "http://resource.mobamas.net/idolmaster/sound/2438901/0e1fdd904fd84ebe84d483858be64bff.mp4",
-                        "comments_work_love_up": "http://resource.mobamas.net/idolmaster/sound/2438901/5b724061c237350605bb590be2dbf349.mp4",
-                        "comments_live": "http://resource.mobamas.net/idolmaster/sound/2438901/1c82a3e0c0264d4ad6c0b3e2d3be3f84.mp4",
-                        "comments_love_max": "http://resource.mobamas.net/idolmaster/sound/2438901/0ccb4c9aba45352bc0d244a9f377c942.mp4"
+                        "comment": "../../sound/2438901/idolcomment.mp3",
+                        "comments_my_1": "../../sound/2438901/my_1.mp3",
+                        "comments_my_2": "../../sound/2438901/my_2.mp3",
+                        "comments_my_3": "../../sound/2438901/my_3.mp3",
+                        "comments_my_4": "../../sound/2438901/my_4.mp3",
+                        "comments_my_max": "../../sound/2438901/my_max.mp3",
+                        "comments_work_1": "../../sound/2438901/work_1.mp3",
+                        "comments_work_2": "../../sound/2438901/work_2.mp3",
+                        "comments_work_3": "../../sound/2438901/work_3.mp3",
+                        "comments_work_4": "../../sound/2438901/work_4.mp3",
+                        "comments_work_max": "../../sound/2438901/work_max.mp3",
+                        "comments_work_love_up": "../../sound/2438901/work_love_up.mp3",
+                        "comments_live": "../../sound/2438901/live.mp3",
+                        "comments_love_max": "../../sound/2438901/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
@@ -2618,20 +2618,20 @@ kg
                         "comments_love_max": "ﾌｯ､つい撮影にのめり込んでしまったよ｡OO…ﾎﾞｸが本当にﾁｶﾗに目覚める時､ｷﾐもまた覚醒する｡そう確信しているよ"
                     },
                     "voice": {
-                        "comment": "http://resource.mobamas.net/idolmaster/sound/2538902/21c3eafacb418ab2496b8bca303c136f.mp4",
-                        "comments_my_1": "http://resource.mobamas.net/idolmaster/sound/2538902/977d5433c99971073cd3bdb5363caba7.mp4",
-                        "comments_my_2": "http://resource.mobamas.net/idolmaster/sound/2538902/ecbc2e2db9888e7dff79da69fc2aae2b.mp4",
-                        "comments_my_3": "http://resource.mobamas.net/idolmaster/sound/2538902/59a3b8ee4d30fcfe11cdf555c68f05e1.mp4",
-                        "comments_my_4": "http://resource.mobamas.net/idolmaster/sound/2538902/90880e4013fda8157e5016faac9d04e6.mp4",
-                        "comments_my_max": "http://resource.mobamas.net/idolmaster/sound/2538902/00cba20a6d2afb1e8a02c337b895b14c.mp4",
-                        "comments_work_1": "http://resource.mobamas.net/idolmaster/sound/2538902/b3b8d2b4b1ae249fae7525cd6a615653.mp4",
-                        "comments_work_2": "http://resource.mobamas.net/idolmaster/sound/2538902/2c9979f8dc950b247685c13e584e9805.mp4",
-                        "comments_work_3": "http://resource.mobamas.net/idolmaster/sound/2538902/baaf409270e4c238a1d4d331c77fae12.mp4",
-                        "comments_work_4": "http://resource.mobamas.net/idolmaster/sound/2538902/9da875bd6f3f9731cad3d209de4fae17.mp4",
-                        "comments_work_max": "http://resource.mobamas.net/idolmaster/sound/2538902/5f97cf29c2cf979ed12b657336dfeae6.mp4",
-                        "comments_work_love_up": "http://resource.mobamas.net/idolmaster/sound/2538902/49eec25f3c2254eb2cf47a54cc0ab496.mp4",
-                        "comments_live": "http://resource.mobamas.net/idolmaster/sound/2538902/84bf7c9a9b38067770cacf7fc8139862.mp4",
-                        "comments_love_max": "http://resource.mobamas.net/idolmaster/sound/2538902/47be485b174b13fbeacc175f60fb4133.mp4"
+                        "comment": "../../sound/2538902/idolcomment.mp3",
+                        "comments_my_1": "../../sound/2538902/my_1.mp3",
+                        "comments_my_2": "../../sound/2538902/my_2.mp3",
+                        "comments_my_3": "../../sound/2538902/my_3.mp3",
+                        "comments_my_4": "../../sound/2538902/my_4.mp3",
+                        "comments_my_max": "../../sound/2538902/my_max.mp3",
+                        "comments_work_1": "../../sound/2538902/work_1.mp3",
+                        "comments_work_2": "../../sound/2538902/work_2.mp3",
+                        "comments_work_3": "../../sound/2538902/work_3.mp3",
+                        "comments_work_4": "../../sound/2538902/work_4.mp3",
+                        "comments_work_max": "../../sound/2538902/work_max.mp3",
+                        "comments_work_love_up": "../../sound/2538902/work_love_up.mp3",
+                        "comments_live": "../../sound/2538902/live.mp3",
+                        "comments_love_max": "../../sound/2538902/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
