--- a/mypage.html
+++ b/mypage.html
@@ -281,6 +281,7 @@
         <a href='event_produce/1733/memory.html' class="banner_type_text" style='background-image:url(image_sp/event/1733/banner_event_01.png)'></a>
         <a href='memory/smart_phone_flash/convert/onetime_flash/10thdreamchance.html' class="banner_type_text" style='background-image:url(image_sp/banner/gacha/8b388df13a8abcfd400eb067d78cc0a2.png)'></a>
         <a href='memory/detail/1933/index.html' class="banner_type_text" style='background-image:url(image_sp/event/1933/banner_event_01.png)'></a>
+        <a href='memory/event_teaser/10th_produce.html' class="banner_type_text" style='background-image:url(image_sp/event/1738/banner_event_slim_01.png)'></a>
         <section>
             <div class="t-Lft" style="width:310px;margin:auto;">
                 <div class="gallery" style="display: inline-block;width: 96px;height:117px;margin: 1px 1px;">
