--- a/memory/bonus_event/bonus_flash_for_stamp/bonus_flash_for_stamp_kaede.html
+++ b/memory/bonus_event/bonus_flash_for_stamp/bonus_flash_for_stamp_kaede.html
@@ -64,7 +64,7 @@
 </head>
 
 <body style="margin:0px;">
-    <div id="animation_container" style="background-color:rgba(0, 0, 0, 0); width:100%; height: 1500px position: relative">
+    <div id="animation_container" style="background-color:rgba(0, 0, 0, 0); width:100%; height: 1500px; position: relative; margin: auto;">
         <canvas id="canvas" width="100%" height="" style="position: absolute; display: block; background-color:rgba(0, 0, 0, 0);"></canvas>
         <div id="dom_overlay_container" style="pointer-events:none; overflow:hidden; width:240px; height:310px; position: absolute; left: 0px; top: 0px; display: block;"></div>
     </div>
@@ -74,26 +74,26 @@
         window.file_name = "pinya_chance"; // createjs の本体ファイルを定義
         window.dir_name = "../../../image_sp/cjs/campaign/anniversary/10th/pinya_chance/";
         window.replace_images = {
-            "replace_item_m_1": "item_flash\/m\/many.png",
-            "replace_item_m_2": "item_flash\/m\/icon_petit_money.png",
-            "replace_item_m_3": "item_flash\/m\/jewel_free.png",
-            "replace_item_m_4": "item_flash\/m\/item_8_3.png",
-            "replace_item_m_5": "item_flash\/m\/3202001.png",
-            "replace_item_m_6": "item_flash\/m\/jewel_free.png",
-            "replace_item_m_7": "item_flash\/m\/icon_petit_money.png",
-            "replace_item_m_8": "item_flash\/m\/item_9_3.png",
-            "replace_item_m_9": "item_flash\/m\/jewel_free.png",
-            "replace_item_m_10": "item_flash\/m\/gacha_0_2.png",
-            "replace_item_m_11": "item_flash\/m\/icon_petit_money.png",
-            "replace_item_l_1": "item_flash\/l\/many.png",
-            "replace_item_m_12": "item_flash\/m\/friend_point.png",
-            "replace_bg": "login_bonus\/stamp\/campaign\/59_10th_anniversary_month\/bg.jpg",
-            "replace_login_logo": "login_bonus\/stamp\/campaign\/59_10th_anniversary_month\/logo2.png",
-            "replace_get_stamp_today": "login_bonus\/stamp\/campaign\/59_10th_anniversary_month\/word.png",
-            "replace_frame1": "login_bonus\/stamp\/campaign\/59_10th_anniversary_month\/frame_1.png",
-            "replace_frame2": "login_bonus\/stamp\/campaign\/59_10th_anniversary_month\/frame_2.png",
-            "replace_next": "login_bonus\/stamp\/campaign\/59_10th_anniversary_month\/next.png",
-            "replace_item_l_2": "item_flash\/l\/2468901.png",
+            "replace_item_m_1": "item_flash/m/many.png",
+            "replace_item_m_2": "item_flash/m/icon_petit_money.png",
+            "replace_item_m_3": "item_flash/m/jewel_free.png",
+            "replace_item_m_4": "item_flash/m/item_8_3.png",
+            "replace_item_m_5": "item_flash/m/3202001.png",
+            "replace_item_m_6": "item_flash/m/jewel_free.png",
+            "replace_item_m_7": "item_flash/m/icon_petit_money.png",
+            "replace_item_m_8": "item_flash/m/item_9_3.png",
+            "replace_item_m_9": "item_flash/m/jewel_free.png",
+            "replace_item_m_10": "item_flash/m/gacha_0_2.png",
+            "replace_item_m_11": "item_flash/m/icon_petit_money.png",
+            "replace_item_l_1": "item_flash/l/many.png",
+            "replace_item_m_12": "item_flash/m/friend_point.png",
+            "replace_bg": "login_bonus/stamp/campaign/59_10th_anniversary_month/bg.jpg",
+            "replace_login_logo": "login_bonus/stamp/campaign/59_10th_anniversary_month/logo2.png",
+            "replace_get_stamp_today": "login_bonus/stamp/campaign/59_10th_anniversary_month/word.png",
+            "replace_frame1": "login_bonus/stamp/campaign/59_10th_anniversary_month/frame_1.png",
+            "replace_frame2": "login_bonus/stamp/campaign/59_10th_anniversary_month/frame_2.png",
+            "replace_next": "login_bonus/stamp/campaign/59_10th_anniversary_month/next.png",
+            "replace_item_l_2": "item_flash/l/2468901.png",
             "replace_item_m_13": null
         }
         window.child_replace_images = {
@@ -177,17 +177,17 @@
             "txt15_4": "ｼﾞｭｴﾙが増えますよ♪",
             "tNum": 3,
             "sr_idol_comment": "特別な瞬間を､大切な人と…",
-            "_url": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/mypage"
+            "_url": "http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/mypage"
         };
         window.child_obj = [{
-            "dir_name": "js\/cjs\/story\/character\/chara_9999999",
+            "dir_name": "js/cjs/story/character/chara_9999999",
             "file_name": "chara_9999999",
-            "image_path": "image_sp\/cjs\/story\/character\/chara_9999999",
+            "image_path": "../../../image_sp/cjs/story/character/chara_9999999",
             "target_mc": "replace_character"
         }, {
-            "dir_name": "js\/cjs\/campaign\/anniversary\/10th",
+            "dir_name": "js/cjs/campaign/anniversary/10th",
             "file_name": "replace_anniversary_sr",
-            "image_path": "image_sp\/cjs\/campaign\/anniversary\/10th\/replace_anniversary_sr",
+            "image_path": "../../../image_sp/cjs/campaign/anniversary/10th/replace_anniversary_sr",
             "target_mc": "replace_anniversary"
         }];
         window.im_cjs = window.im_cjs || {};
