--- a/memory/bonus_event/bonus_flash_for_stamp/bonus_flash_for_stamp_kaede.html
+++ b/memory/bonus_event/bonus_flash_for_stamp/bonus_flash_for_stamp_kaede.html
@@ -123,7 +123,7 @@
             "txt2_2": "(3枚以上所持しているので、今回は",
             "txt2_3": "ﾌﾟﾚｾﾞﾝﾄされませんでした)",
             "txt2_4": "",
-            "txt3_1": "11%/28～12%/7の期間中",
+            "txt3_1": "11/28～12/7の期間中",
             "txt3_2": "どきどきぴにゃﾁｬﾝｽは毎日",
             "txt3_3": "挑戦できますよ!",
             "txt3_4": "明日のﾁｬﾚﾝｼﾞもお待ちしてます♪",
@@ -177,7 +177,7 @@
             "txt15_4": "ｼﾞｭｴﾙが増えますよ♪",
             "tNum": 3,
             "sr_idol_comment": "特別な瞬間を､大切な人と…",
-            "_url": "http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/mypage"
+            "_url": "../../../mypage.html"
         };
         window.child_obj = [{
             "dir_name": "js/cjs/story/character/chara_9999999",
@@ -191,7 +191,7 @@
             "target_mc": "replace_anniversary"
         }];
         window.im_cjs = window.im_cjs || {};
-        window.im_cjs.jump_url = 'http://sp.pf.mbga.jp/12008305/?guid=ON'; // createjsの演出が全て終了した場合の飛び先urlの定義
+        window.im_cjs.jump_url = '../../../mypage.html'; // createjsの演出が全て終了した場合の飛び先urlの定義
         var _ua = navigator.userAgent;
         var ios_app_flg = false;
         var ios_browser_flg = (_ua.indexOf('iPhone') !== -1) ? true : false;
