--- a/memory/onetime_flash/show_swf/200355_k.html
+++ b/memory/onetime_flash/show_swf/200355_k.html
@@ -67,7 +67,7 @@
             "replace_target_240x240_item_l": "campaign_flash/item_l/item_14.png"
         }
         window.im_cjs = {
-            "url": "200356.html",
+            "url": "200356_k.html",
             "item_flag": "0",
             "num_countdown": "8",
             "msg1_1": "세월이 흘러도 여전히, 빛이 바래지 않는",
@@ -85,7 +85,7 @@
             "cp_day": "2",
             "first_flag": 1,
             "rocket_position": 1,
-            "_url": "200356.html"
+            "_url": "200356_k.html"
         };
         window.child_obj = [];
         window.im_cjs = window.im_cjs || {};
