--- a/memory/onetime_flash/show_swf/200356_k.html
+++ b/memory/onetime_flash/show_swf/200356_k.html
@@ -67,7 +67,7 @@
             "replace_target_240x240_item_l": "campaign_flash/item_l/item_15.png"
         }
         window.im_cjs = {
-            "url": "200357.html",
+            "url": "200357_k.html",
             "item_flag": "0",
             "num_countdown": "7",
             "msg1_1": "사랑…은 어려워. 하지만, 나는 팬을,",
@@ -85,7 +85,7 @@
             "cp_day": "3",
             "first_flag": 0,
             "rocket_position": 2,
-            "_url": "200357.html"
+            "_url": "200357_k.html"
         };
         window.child_obj = [];
         window.im_cjs = window.im_cjs || {};
