--- a/memory/onetime_flash/show_swf/200359_k.html
+++ b/memory/onetime_flash/show_swf/200359_k.html
@@ -67,7 +67,7 @@
             "replace_target_240x240_item_l": "campaign_flash/item_l/card_3400501.png"
         }
         window.im_cjs = {
-            "url": "../../anniversary.html",
+            "url": "200360_k.html",
             "item_flag": "0",
             "num_countdown": "4",
             "msg1_1": "입식 파티까지… 아, 아뇨,",
@@ -85,7 +85,7 @@
             "cp_day": "4",
             "first_flag": 0,
             "rocket_position": "5",
-            "_url": "../../anniversary.html"
+            "_url": "200360_k.html"
         };
         window.child_obj = [];
         window.im_cjs = window.im_cjs || {};
