--- a/memory/onetime_flash/show_swf/200362.html
+++ b/memory/onetime_flash/show_swf/200362.html
@@ -67,7 +67,7 @@
             "replace_target_240x240_item_l": "campaign_flash/item_l/gacha_0.png"
         }
         window.im_cjs = {
-            "url": "../../anniversary.html",
+            "url": "200363.html",
             "item_flag": "0",
             "num_countdown": "1",
             "msg1_1": "生まれてくれて､ありがとう｡",
@@ -85,7 +85,7 @@
             "cp_day": "9",
             "first_flag": 0,
             "rocket_position": "8",
-            "_url": "../../anniversary.html"
+            "_url": "200363.html"
         };
         window.child_obj = [];
         window.im_cjs = window.im_cjs || {};
