--- a/memory/onetime_flash/show_swf/200354_k.html
+++ b/memory/onetime_flash/show_swf/200354_k.html
@@ -67,7 +67,7 @@
             "replace_target_240x240_item_l": "campaign_flash\/item_l\/item_1000003.png"
         }
         window.im_cjs = {
-            "url": "../../../mypage.html",
+            "url": "200355_k.html",
             "item_flag": "0",
             "num_countdown": "9",
             "msg1_1": "토토키 아이리예요♪ 웬걸,",
@@ -85,7 +85,7 @@
             "cp_day": "1",
             "first_flag": 1,
             "rocket_position": 0,
-            "_url": "../../../mypage.html"
+            "_url": "200355_k.html"
         };
         window.child_obj = [];
         window.im_cjs = window.im_cjs || {};
