--- a/memory/onetime_flash/show_swf/200357_k.html
+++ b/memory/onetime_flash/show_swf/200357_k.html
@@ -67,7 +67,7 @@
             "replace_target_240x240_item_l": "campaign_flash/item_l/gacha_0.png"
         }
         window.im_cjs = {
-            "url": "../../anniversary.html",
+            "url": "200358_k.html",
             "item_flag": "0",
             "num_countdown": "6",
             "msg1_1": "옷, 슈코 쨩의 차례일까나?",
@@ -85,7 +85,7 @@
             "cp_day": "4",
             "first_flag": 0,
             "rocket_position": "3",
-            "_url": "../../anniversary.html"
+            "_url": "200358_k.html"
         };
         window.child_obj = [];
         window.im_cjs = window.im_cjs || {};
