--- a/memory/onetime_flash/show_swf/200358.html
+++ b/memory/onetime_flash/show_swf/200358.html
@@ -67,7 +67,7 @@
             "replace_target_240x240_item_l": "campaign_flash/item_l/petit_many.png"
         }
         window.im_cjs = {
-            "url": "../../anniversary.html",
+            "url": "200359.html",
             "item_flag": "0",
             "num_countdown": "5",
             "msg1_1": "あっ､ﾌﾟﾛﾃﾞｭｰｻｰさん! お疲れさ",
@@ -85,7 +85,7 @@
             "cp_day": "5",
             "first_flag": 0,
             "rocket_position": "4",
-            "_url": "../../anniversary.html"
+            "_url": "200359.html"
         };
         window.child_obj = [];
         window.im_cjs = window.im_cjs || {};
