--- a/memory/onetime_flash/show_swf/200360.html
+++ b/memory/onetime_flash/show_swf/200360.html
@@ -67,7 +67,7 @@
             "replace_target_240x240_item_l": "campaign_flash/item_l/item_1000001.png"
         }
         window.im_cjs = {
-            "url": "../../anniversary.html",
+            "url": "200361.html",
             "item_flag": "0",
             "num_countdown": "3",
             "msg1_1": "崖っぷちｱｲﾄﾞﾙだったﾅﾅが､",
@@ -85,7 +85,7 @@
             "cp_day": "7",
             "first_flag": 0,
             "rocket_position": "6",
-            "_url": "../../anniversary.html"
+            "_url": "200361.html"
         };
         window.child_obj = [];
         window.im_cjs = window.im_cjs || {};
