--- a/memory/onetime_flash/show_swf/200361.html
+++ b/memory/onetime_flash/show_swf/200361.html
@@ -67,7 +67,7 @@
             "replace_target_240x240_item_l": "campaign_flash/item_l/item_1000002.png"
         }
         window.im_cjs = {
-            "url": "../../anniversary.html",
+            "url": "200362.html",
             "item_flag": "0",
             "num_countdown": "2",
             "msg1_1": "とうとうここまで来たねー☆",
@@ -85,7 +85,7 @@
             "cp_day": "8",
             "first_flag": 0,
             "rocket_position": "7",
-            "_url": "../../anniversary.html"
+            "_url": "200362.html"
         };
         window.child_obj = [];
         window.im_cjs = window.im_cjs || {};
